--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React FoodOrder</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./src/components/styles/CartScreen.css"
+    />
   </head>
-  <body>
+  <body id="modal">
     <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
